# anchor-engine-node

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  __init__.py  add_test_memories.py  anchor.spec  ark_main.py  cli.py  combined_text.txt  config.yaml  copilot_cli.py  main.py  pyproject.toml  simple_tool_mode.py  sybil_agent.py  sybill_agent.py  test.sh  tool_execution.py  tool_safety.py  user_settings.json  utu_internal.db
archive/: cozo_memory_snapshot_2026-01-13T06-21-53-634Z.yaml
backend/: CHANGELOG.md  combined_text_backend.txt  config.yaml  doc_policy.md  launcher.py
docs/: FINDING_WEBGPU_MODELS.md  WEBGPU_MODEL_CONVERSION.md
engine/: package.json  user_settings.json
interface/: chat.html  index.html
mcp/: ARCHIVED.md  README.md  __init__.py  client.py  security.py  server.py
specs/: doc_policy.md  implementation_summary.md  integration_summary.md  plan.md  simple_mode.md  simple_mode_guide.md  simple_mode_tests.md  spec.md  tasks.md  trigger_specs.md  troubleshooting.md
tests/: __init__.py  test_code_grep.py  test_code_grep_tool.py  test_health.py  test_integration.py  test_mcp_security.py  test_read_preview.py  test_router.py  test_router_glob_context.py  test_safety_preview.py  test_tool_call_parsing.py  test_tool_safety.py  test_tool_streaming.py  test_triggers.py
tools/: CHANGELOG.md  README.md  code_tools.py  file_io.py  gui_automation_tool.py  log-viewer.html  memory_tool.py  mobile-chat.html  vision_tool.py  web_search.py  webgpu-chat.html  webgpu-server-embed.html  webgpu_bridge.py
(+452 files in other folders)
