[project]
name = "ark-stable"
version = "0.1.0"
description = ""
authors = [
    {name = "RSBalchII",email = "robertbalchii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "ddgs (>=9.5.2,<10.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "chromadb-client (>=1.0.15,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
